--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -13,13 +13,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Dataset taken from Josh Korngiebel on Kaggle. \n",
-    "https://www.kaggle.com/datasets/jkorn28/pokemon-stats-gens-1-9 "
+    "Original dataset taken from Josh Korngiebel on Kaggle.\n",
+    "https://www.kaggle.com/datasets/jkorn28/pokemon-stats-gens-1-9 \n",
+    "\n",
+    "Dataset modified by me in another file and available to download in the repository."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,152 +29,6 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Dex No</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Base Name</th>\n",
-       "      <th>Type 1</th>\n",
-       "      <th>Type 2</th>\n",
-       "      <th>BST</th>\n",
-       "      <th>HP</th>\n",
-       "      <th>Attack</th>\n",
-       "      <th>Defense</th>\n",
-       "      <th>Sp. Attack</th>\n",
-       "      <th>Sp. Defense</th>\n",
-       "      <th>Speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>Bulbasaur</td>\n",
-       "      <td>GRASS</td>\n",
-       "      <td>POISON</td>\n",
-       "      <td>318</td>\n",
-       "      <td>45</td>\n",
-       "      <td>49</td>\n",
-       "      <td>49</td>\n",
-       "      <td>65</td>\n",
-       "      <td>65</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>Ivysaur</td>\n",
-       "      <td>GRASS</td>\n",
-       "      <td>POISON</td>\n",
-       "      <td>405</td>\n",
-       "      <td>60</td>\n",
-       "      <td>62</td>\n",
-       "      <td>63</td>\n",
-       "      <td>80</td>\n",
-       "      <td>80</td>\n",
-       "      <td>60</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>GRASS</td>\n",
-       "      <td>POISON</td>\n",
-       "      <td>525</td>\n",
-       "      <td>80</td>\n",
-       "      <td>82</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>100</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Mega Venusaur</td>\n",
-       "      <td>Venusaur</td>\n",
-       "      <td>GRASS</td>\n",
-       "      <td>POISON</td>\n",
-       "      <td>625</td>\n",
-       "      <td>80</td>\n",
-       "      <td>100</td>\n",
-       "      <td>123</td>\n",
-       "      <td>122</td>\n",
-       "      <td>120</td>\n",
-       "      <td>80</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>Charmander</td>\n",
-       "      <td>FIRE</td>\n",
-       "      <td>-</td>\n",
-       "      <td>309</td>\n",
-       "      <td>39</td>\n",
-       "      <td>52</td>\n",
-       "      <td>43</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "      <td>65</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Dex No           Name   Base Name Type 1  Type 2  BST  HP  Attack  Defense  \\\n",
-       "0       1      Bulbasaur   Bulbasaur  GRASS  POISON  318  45      49       49   \n",
-       "1       2        Ivysaur     Ivysaur  GRASS  POISON  405  60      62       63   \n",
-       "2       3       Venusaur    Venusaur  GRASS  POISON  525  80      82       83   \n",
-       "3       3  Mega Venusaur    Venusaur  GRASS  POISON  625  80     100      123   \n",
-       "4       4     Charmander  Charmander   FIRE       -  309  39      52       43   \n",
-       "\n",
-       "   Sp. Attack  Sp. Defense  Speed  \n",
-       "0          65           65     45  \n",
-       "1          80           80     60  \n",
-       "2         100          100     80  \n",
-       "3         122          120     80  \n",
-       "4          60           50     65  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pokedf = pd.read_csv('pokemon.csv')\n",
-    "pokedf.head()"
    ]
   }
  ],
