more file swapping and redundant file deleted

--- a/Data Prep/Data-preparation.ipynb
+++ b/Data Prep/Data-preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -164,13 +164,13 @@
        "4          60           50     65  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokedf = pd.read_csv('pokemon.csv')\n",
+    "pokedf = pd.read_csv('pokemon_data_orig.csv')\n",
     "pokedf.head()"
    ]
   },
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "1193     130       88          70          108    104  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
        "1200       84          60           96    110  "
       ]
      },
-     "execution_count": 55,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1041,13 +1041,22 @@
        "[963 rows x 16 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pokedf.head(963)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pokedf.to_csv('pokemon_data.csv', index=False)"
    ]
   }
  ],
