--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -16,12 +16,12 @@
     "Original dataset taken from Josh Korngiebel on Kaggle.\n",
     "https://www.kaggle.com/datasets/jkorn28/pokemon-stats-gens-1-9 \n",
     "\n",
-    "Dataset modified by me in another file and available to download in the repository."
+    "Dataset modified by me in the data prep folder. All operations in this notebook will be using the modified csv file."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,15 @@
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pokedf = pd.read_csv('pokemon_data_custom.csv')"
    ]
   }
  ],
