--- a/Data Prep/Data-preparation.ipynb
+++ b/Data Prep/Data-preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4          60           50     65  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "1193     130       88          70          108    104  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -467,8 +467,8 @@
        "      <td>1011</td>\n",
        "      <td>Dipplin</td>\n",
        "      <td>Dipplin</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Dragon</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>DRAGON</td>\n",
        "      <td>485</td>\n",
        "      <td>80</td>\n",
        "      <td>80</td>\n",
@@ -482,8 +482,8 @@
        "      <td>1012</td>\n",
        "      <td>Poltchageist</td>\n",
        "      <td>Poltchageist</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Ghost</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>GHOST</td>\n",
        "      <td>308</td>\n",
        "      <td>40</td>\n",
        "      <td>45</td>\n",
@@ -497,8 +497,8 @@
        "      <td>1013</td>\n",
        "      <td>Sinistcha</td>\n",
        "      <td>Sinistcha</td>\n",
-       "      <td>Grass</td>\n",
-       "      <td>Ghost</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>GHOST</td>\n",
        "      <td>508</td>\n",
        "      <td>71</td>\n",
        "      <td>60</td>\n",
@@ -512,8 +512,8 @@
        "      <td>1014</td>\n",
        "      <td>Okidogi</td>\n",
        "      <td>Okidogi</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>Fight</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>FIGHT</td>\n",
        "      <td>555</td>\n",
        "      <td>88</td>\n",
        "      <td>128</td>\n",
@@ -527,8 +527,8 @@
        "      <td>1015</td>\n",
        "      <td>Munkidori</td>\n",
        "      <td>Munkidori</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>Psychic</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>PSYCHIC</td>\n",
        "      <td>555</td>\n",
        "      <td>88</td>\n",
        "      <td>75</td>\n",
@@ -542,8 +542,8 @@
        "      <td>1016</td>\n",
        "      <td>Fezandipiti</td>\n",
        "      <td>Fezandipiti</td>\n",
-       "      <td>Poison</td>\n",
-       "      <td>Fairy</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>FAIRY</td>\n",
        "      <td>555</td>\n",
        "      <td>88</td>\n",
        "      <td>91</td>\n",
@@ -557,7 +557,7 @@
        "      <td>1017</td>\n",
        "      <td>Ogerpon</td>\n",
        "      <td>Ogerpon</td>\n",
-       "      <td>Grass</td>\n",
+       "      <td>GRASS</td>\n",
        "      <td>-</td>\n",
        "      <td>550</td>\n",
        "      <td>80</td>\n",
@@ -575,13 +575,13 @@
        "      Dex No          Name     Base Name  Type 1   Type 2  BST  HP  Attack  \\\n",
        "1192    1009  Walking Wake  Walking Wake   WATER   DRAGON  590  99      83   \n",
        "1193    1010   Iron Leaves   Iron Leaves   GRASS  PSYCHIC  590  90     130   \n",
-       "1194    1011       Dipplin       Dipplin   Grass   Dragon  485  80      80   \n",
-       "1195    1012  Poltchageist  Poltchageist   Grass    Ghost  308  40      45   \n",
-       "1196    1013     Sinistcha     Sinistcha   Grass    Ghost  508  71      60   \n",
-       "1197    1014       Okidogi       Okidogi  Poison    Fight  555  88     128   \n",
-       "1198    1015     Munkidori     Munkidori  Poison  Psychic  555  88      75   \n",
-       "1199    1016   Fezandipiti   Fezandipiti  Poison    Fairy  555  88      91   \n",
-       "1200    1017       Ogerpon       Ogerpon   Grass        -  550  80     120   \n",
+       "1194    1011       Dipplin       Dipplin   GRASS   DRAGON  485  80      80   \n",
+       "1195    1012  Poltchageist  Poltchageist   GRASS    GHOST  308  40      45   \n",
+       "1196    1013     Sinistcha     Sinistcha   GRASS    GHOST  508  71      60   \n",
+       "1197    1014       Okidogi       Okidogi  POISON    FIGHT  555  88     128   \n",
+       "1198    1015     Munkidori     Munkidori  POISON  PSYCHIC  555  88      75   \n",
+       "1199    1016   Fezandipiti   Fezandipiti  POISON    FAIRY  555  88      91   \n",
+       "1200    1017       Ogerpon       Ogerpon   GRASS        -  550  80     120   \n",
        "\n",
        "      Defense  Sp. Attack  Sp. Defense  Speed  \n",
        "1192       91         125           83    109  \n",
@@ -595,7 +595,7 @@
        "1200       84          60           96    110  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,8 +607,8 @@
     "    'Dex No': [1011, 1012, 1013, 1014, 1015, 1016, 1017],\n",
     "    'Name': [\"Dipplin\", \"Poltchageist\", \"Sinistcha\", \"Okidogi\", \"Munkidori\", \"Fezandipiti\", \"Ogerpon\"],\n",
     "    'Base Name': [\"Dipplin\", \"Poltchageist\", \"Sinistcha\", \"Okidogi\", \"Munkidori\", \"Fezandipiti\", \"Ogerpon\"],\n",
-    "    'Type 1': [\"Grass\", \"Grass\", \"Grass\", \"Poison\", \"Poison\", \"Poison\", \"Grass\"],\n",
-    "    'Type 2': [\"Dragon\", \"Ghost\", \"Ghost\", \"Fight\", \"Psychic\", \"Fairy\", \"-\"],\n",
+    "    'Type 1': [\"GRASS\", \"GRASS\", \"GRASS\", \"POISON\", \"POISON\", \"POISON\", \"GRASS\"],\n",
+    "    'Type 2': [\"DRAGON\", \"GHOST\", \"GHOST\", \"FIGHT\", \"PSYCHIC\", \"FAIRY\", \"-\"],\n",
     "    'BST': [485, 308, 508, 555, 555, 555, 550],\n",
     "    'HP': [80, 40, 71, 88, 88, 88, 80],\n",
     "    'Attack': [80, 45, 60, 128, 75, 91, 120],\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,16 +682,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# All mega forms were added in generation 6, so they will be treated as generation 6 Pokemon\n",
     "# This will be a notable difference because mega forms tend to be stronger than their base forms\n",
-    "pokedf.loc[pokedf['Base Name'].str.contains(\"Mega \"), 'Generation'] = 6\n",
+    "pokedf.loc[pokedf['Name'].str.contains(\"Mega \"), 'Generation'] = 6\n",
     "\n",
     "# Tauros alternate forms added in gen 9\n",
-    "pokedf.loc[pokedf['Base Name'].str.contains(\" Breed\"), 'Generation'] = 9"
+    "pokedf.loc[pokedf['Name'].str.contains(\" Breed\"), 'Generation'] = 9"
    ]
   },
   {
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +855,7 @@
        "      <td>122</td>\n",
        "      <td>120</td>\n",
        "      <td>80</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -1016,7 +1016,7 @@
        "0        49       49          65           65     45           1      False   \n",
        "1        62       63          80           80     60           1      False   \n",
        "2        82       83         100          100     80           1      False   \n",
-       "3       100      123         122          120     80           1      False   \n",
+       "3       100      123         122          120     80           6      False   \n",
        "4        52       43          60           50     65           1      False   \n",
        "..      ...      ...         ...          ...    ...         ...        ...   \n",
        "958     107      101         127           89     79           7       True   \n",
@@ -1041,7 +1041,7 @@
        "[963 rows x 16 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
