--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,12 +32,373 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Loading and Previewing Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "pokedf = pd.read_csv('pokemon_data_custom.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dex No</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Base Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>BST</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Attack</th>\n",
+       "      <th>Sp. Defense</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>Mythical</th>\n",
+       "      <th>Notable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>Bulbasaur</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>318</td>\n",
+       "      <td>45</td>\n",
+       "      <td>49</td>\n",
+       "      <td>49</td>\n",
+       "      <td>65</td>\n",
+       "      <td>65</td>\n",
+       "      <td>45</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>Ivysaur</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>405</td>\n",
+       "      <td>60</td>\n",
+       "      <td>62</td>\n",
+       "      <td>63</td>\n",
+       "      <td>80</td>\n",
+       "      <td>80</td>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>525</td>\n",
+       "      <td>80</td>\n",
+       "      <td>82</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>100</td>\n",
+       "      <td>80</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Mega Venusaur</td>\n",
+       "      <td>Venusaur</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>625</td>\n",
+       "      <td>80</td>\n",
+       "      <td>100</td>\n",
+       "      <td>123</td>\n",
+       "      <td>122</td>\n",
+       "      <td>120</td>\n",
+       "      <td>80</td>\n",
+       "      <td>6</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>Charmander</td>\n",
+       "      <td>FIRE</td>\n",
+       "      <td>-</td>\n",
+       "      <td>309</td>\n",
+       "      <td>39</td>\n",
+       "      <td>52</td>\n",
+       "      <td>43</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>65</td>\n",
+       "      <td>1</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Dex No           Name   Base Name Type 1  Type 2  BST  HP  Attack  Defense  \\\n",
+       "0       1      Bulbasaur   Bulbasaur  GRASS  POISON  318  45      49       49   \n",
+       "1       2        Ivysaur     Ivysaur  GRASS  POISON  405  60      62       63   \n",
+       "2       3       Venusaur    Venusaur  GRASS  POISON  525  80      82       83   \n",
+       "3       3  Mega Venusaur    Venusaur  GRASS  POISON  625  80     100      123   \n",
+       "4       4     Charmander  Charmander   FIRE       -  309  39      52       43   \n",
+       "\n",
+       "   Sp. Attack  Sp. Defense  Speed  Generation  Legendary  Mythical  Notable  \n",
+       "0          65           65     45           1      False     False    False  \n",
+       "1          80           80     60           1      False     False    False  \n",
+       "2         100          100     80           1      False     False    False  \n",
+       "3         122          120     80           6      False     False    False  \n",
+       "4          60           50     65           1      False     False    False  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokedf.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dex No</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Base Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>BST</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Attack</th>\n",
+       "      <th>Sp. Defense</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>Mythical</th>\n",
+       "      <th>Notable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1196</th>\n",
+       "      <td>1013</td>\n",
+       "      <td>Sinistcha</td>\n",
+       "      <td>Sinistcha</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>GHOST</td>\n",
+       "      <td>508</td>\n",
+       "      <td>71</td>\n",
+       "      <td>60</td>\n",
+       "      <td>106</td>\n",
+       "      <td>121</td>\n",
+       "      <td>80</td>\n",
+       "      <td>70</td>\n",
+       "      <td>9</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1197</th>\n",
+       "      <td>1014</td>\n",
+       "      <td>Okidogi</td>\n",
+       "      <td>Okidogi</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>FIGHT</td>\n",
+       "      <td>555</td>\n",
+       "      <td>88</td>\n",
+       "      <td>128</td>\n",
+       "      <td>115</td>\n",
+       "      <td>58</td>\n",
+       "      <td>86</td>\n",
+       "      <td>80</td>\n",
+       "      <td>9</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1198</th>\n",
+       "      <td>1015</td>\n",
+       "      <td>Munkidori</td>\n",
+       "      <td>Munkidori</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>PSYCHIC</td>\n",
+       "      <td>555</td>\n",
+       "      <td>88</td>\n",
+       "      <td>75</td>\n",
+       "      <td>66</td>\n",
+       "      <td>130</td>\n",
+       "      <td>90</td>\n",
+       "      <td>106</td>\n",
+       "      <td>9</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1199</th>\n",
+       "      <td>1016</td>\n",
+       "      <td>Fezandipiti</td>\n",
+       "      <td>Fezandipiti</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>FAIRY</td>\n",
+       "      <td>555</td>\n",
+       "      <td>88</td>\n",
+       "      <td>91</td>\n",
+       "      <td>82</td>\n",
+       "      <td>70</td>\n",
+       "      <td>125</td>\n",
+       "      <td>99</td>\n",
+       "      <td>9</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1200</th>\n",
+       "      <td>1017</td>\n",
+       "      <td>Ogerpon</td>\n",
+       "      <td>Ogerpon</td>\n",
+       "      <td>GRASS</td>\n",
+       "      <td>-</td>\n",
+       "      <td>550</td>\n",
+       "      <td>80</td>\n",
+       "      <td>120</td>\n",
+       "      <td>84</td>\n",
+       "      <td>60</td>\n",
+       "      <td>96</td>\n",
+       "      <td>110</td>\n",
+       "      <td>9</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Dex No         Name    Base Name  Type 1   Type 2  BST  HP  Attack  \\\n",
+       "1196    1013    Sinistcha    Sinistcha   GRASS    GHOST  508  71      60   \n",
+       "1197    1014      Okidogi      Okidogi  POISON    FIGHT  555  88     128   \n",
+       "1198    1015    Munkidori    Munkidori  POISON  PSYCHIC  555  88      75   \n",
+       "1199    1016  Fezandipiti  Fezandipiti  POISON    FAIRY  555  88      91   \n",
+       "1200    1017      Ogerpon      Ogerpon   GRASS        -  550  80     120   \n",
+       "\n",
+       "      Defense  Sp. Attack  Sp. Defense  Speed  Generation  Legendary  \\\n",
+       "1196      106         121           80     70           9      False   \n",
+       "1197      115          58           86     80           9       True   \n",
+       "1198       66         130           90    106           9       True   \n",
+       "1199       82          70          125     99           9       True   \n",
+       "1200       84          60           96    110           9       True   \n",
+       "\n",
+       "      Mythical  Notable  \n",
+       "1196     False    False  \n",
+       "1197     False    False  \n",
+       "1198     False    False  \n",
+       "1199     False    False  \n",
+       "1200     False    False  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pokedf.tail()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset contains all currently released Pokemon, complete with 6 base stats for each and their totals. It also contains boolean columns for special types of Pokemon. A more specific choice I made while editing this dataset in the preparation file was to list all Mega Pokemon as the generation that Megas were released in, 6, rather than the Pokemons' home generations."
    ]
   }
  ],
