--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Powercreep EDA"
+    "# Exploratory Data Analysis of Powercreep in Pokemon"
    ]
   },
   {
@@ -20,8 +20,65 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"text-align: center;\">Introduction</p>\n",
+    "\n",
+    "### **Background**\n",
+    "\n",
+    "Standing head and shoulders over every single media company and intellectual property group in the world is Pokemon. As the highest grossing media franchise of all time, Pokemon has cemented, no matter how big or small, a place in the minds of almost everyone. Because of the many games and multiplayer features added, communities of hobbyists dedicated to competitive Pokemon battling have developed. \n",
+    "\n",
+    "These hobbyists have developed remarkably optimized Pokemon teams, and continue to battle online with a thriving competitive scene. Everytime a new generation of Pokemon is released, the online competitive scene has to scramble to adjust to what has been deemed \"powercreep\". Powercreep is a term used throughout gaming to generally refer to the phenomenon of new > old, that is, new content released by the maker of the game more often than not tend to outclass older content.\n",
+    "\n",
+    "### **Goal**\n",
+    "\n",
+    "Leveraging Python libraries, we hope to both quantify and visualize the effect of powercreep. This will be done by analyzing what makes a Pokemon \"strong\", and using that as a metric to view powercreep over the 9 generations of Pokemon."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"text-align: center;\">Table of Contents</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. The Data\n",
+    "    - Loading\n",
+    "    - Previewing & Explaining\n",
+    "    - Error Testing\n",
+    "1. Analysis\n",
+    "    - Stat Distributions\n",
+    "    - Special Pokemon\n",
+    "        - Legendaries\n",
+    "        - Mythicals\n",
+    "        - Notables\n",
+    "        - \"Optimized\" Pokemon\n",
+    "        - Average Type Weakness\n",
+    "1. Conclusions\n",
+    "    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## <p style=\"text-align: center;\">The Data</p>\n",
+    "\n",
+    "### **Loading (+ Libraries)**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,16 +89,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Loading and Previewing Dataset"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,8 +98,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data has already been prepared in another folder on this repository. For more detailed information on what changes were made to the original dataset by Josh Korngiebel, refer to that folder. Briefly, useful columns were added for classification, and 7 missing Pokemon were added."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Previewing & Explaining**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +273,7 @@
        "4          60           50     65           1      False     False    False  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +449,7 @@
        "1200     False    False  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +463,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The dataset contains all currently released Pokemon, complete with 6 base stats for each and their totals. It also contains boolean columns for special types of Pokemon. A more specific choice I made while editing this dataset in the preparation file was to list all Mega Pokemon as the generation that Megas were released in, 6, rather than the Pokemons' home generations."
+    "The data contains 16 columns.\n",
+    "- Dex No: Refers to the official *Pokedex* number, of the Pokemon. Every Pokemon has a unique Pokedex number, or as it will be referred to, Dex number.\n",
+    "\n",
+    "- Name: Self explanatory with one caveat, certain Pokemon are considered *alternate forms*, that is, they are the same species of Pokemon, but simply a different variant. One example is the Mega Venusaur visible in the dataframe head. Notice the entry shares the same Dex number as its base form, Venusaur.\n",
+    "\n",
+    "- Base Name: Every Pokemon has the same Base Name as Name, except the aformentioned variants, who instead have the name of the original form.\n",
+    "\n",
+    "- Type 1 and 2: There are 18 elemental \"types\" of Pokemon, which will be explained in more detail later. Notice that not all Pokemon have two types, some only have one. In that case, the Type 2 column will have a placeholder '-'"
    ]
   }
  ],
