table of contents and data reading and explanation

--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -470,7 +470,13 @@
     "\n",
     "- Base Name: Every Pokemon has the same Base Name as Name, except the aformentioned variants, who instead have the name of the original form.\n",
     "\n",
-    "- Type 1 and 2: There are 18 elemental \"types\" of Pokemon, which will be explained in more detail later. Notice that not all Pokemon have two types, some only have one. In that case, the Type 2 column will have a placeholder '-'"
+    "- Type 1 and 2: There are 18 elemental \"types\" of Pokemon, which will be explained in more detail later. Notice that not all Pokemon have two types, some only have one. In that case, the Type 2 column will have a placeholder '-'.\n",
+    "\n",
+    "- BST, HP, Attack, Defense, Sp. Attack, Sp. Defense, and Speed: HP through Speed all refer to different stats of a Pokemon. \"Sp\" in two of the columns stands for \"Special\" which just refers to a slightly different but equally important Attack and Defense stat. \"HP\" stands for \"Health Points\". BST is simply the total of these six fundamental stats. Note that higher = better when it comes to stats.\n",
+    "\n",
+    "- Generation: Pokemon are released not one by one, but in large batches, referred to as \"Generations\", or more colloquially, just \"Gens\". There are currently nine generations of Pokemon, and this column assigns the corresponding generation number to each Pokemon. Note: The generations are in order with two exceptions, those being Mega Evolutions, which were introduced to older Pokemon in Generation 6. While Mega Evolutions tehnically belong to the generation that their base form is from, since they were all added in at a later date, I have decided to keep them under the Generation 6 banner.\n",
+    "\n",
+    "- Legendary, Mythical, and Notable: These are all special classes of Pokemon. Legendary and Mythical and official designations by the Pokemon Company. Notable is a classification I have chosen to add to Pokemon that miscellaneously special, and are not officially Legendary or Mythical."
    ]
   }
  ],
