incorrect spelling of fight in custom csv

--- a/Data Prep/Data-preparation.ipynb
+++ b/Data Prep/Data-preparation.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "4          60           50     65  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "1193     130       88          70          108    104  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
        "      <td>Okidogi</td>\n",
        "      <td>Okidogi</td>\n",
        "      <td>POISON</td>\n",
-       "      <td>FIGHT</td>\n",
+       "      <td>FIGHTING</td>\n",
        "      <td>555</td>\n",
        "      <td>88</td>\n",
        "      <td>128</td>\n",
@@ -572,16 +572,16 @@
        "</div>"
       ],
       "text/plain": [
-       "      Dex No          Name     Base Name  Type 1   Type 2  BST  HP  Attack  \\\n",
-       "1192    1009  Walking Wake  Walking Wake   WATER   DRAGON  590  99      83   \n",
-       "1193    1010   Iron Leaves   Iron Leaves   GRASS  PSYCHIC  590  90     130   \n",
-       "1194    1011       Dipplin       Dipplin   GRASS   DRAGON  485  80      80   \n",
-       "1195    1012  Poltchageist  Poltchageist   GRASS    GHOST  308  40      45   \n",
-       "1196    1013     Sinistcha     Sinistcha   GRASS    GHOST  508  71      60   \n",
-       "1197    1014       Okidogi       Okidogi  POISON    FIGHT  555  88     128   \n",
-       "1198    1015     Munkidori     Munkidori  POISON  PSYCHIC  555  88      75   \n",
-       "1199    1016   Fezandipiti   Fezandipiti  POISON    FAIRY  555  88      91   \n",
-       "1200    1017       Ogerpon       Ogerpon   GRASS        -  550  80     120   \n",
+       "      Dex No          Name     Base Name  Type 1    Type 2  BST  HP  Attack  \\\n",
+       "1192    1009  Walking Wake  Walking Wake   WATER    DRAGON  590  99      83   \n",
+       "1193    1010   Iron Leaves   Iron Leaves   GRASS   PSYCHIC  590  90     130   \n",
+       "1194    1011       Dipplin       Dipplin   GRASS    DRAGON  485  80      80   \n",
+       "1195    1012  Poltchageist  Poltchageist   GRASS     GHOST  308  40      45   \n",
+       "1196    1013     Sinistcha     Sinistcha   GRASS     GHOST  508  71      60   \n",
+       "1197    1014       Okidogi       Okidogi  POISON  FIGHTING  555  88     128   \n",
+       "1198    1015     Munkidori     Munkidori  POISON   PSYCHIC  555  88      75   \n",
+       "1199    1016   Fezandipiti   Fezandipiti  POISON     FAIRY  555  88      91   \n",
+       "1200    1017       Ogerpon       Ogerpon   GRASS         -  550  80     120   \n",
        "\n",
        "      Defense  Sp. Attack  Sp. Defense  Speed  \n",
        "1192       91         125           83    109  \n",
@@ -595,7 +595,7 @@
        "1200       84          60           96    110  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
     "    'Name': [\"Dipplin\", \"Poltchageist\", \"Sinistcha\", \"Okidogi\", \"Munkidori\", \"Fezandipiti\", \"Ogerpon\"],\n",
     "    'Base Name': [\"Dipplin\", \"Poltchageist\", \"Sinistcha\", \"Okidogi\", \"Munkidori\", \"Fezandipiti\", \"Ogerpon\"],\n",
     "    'Type 1': [\"GRASS\", \"GRASS\", \"GRASS\", \"POISON\", \"POISON\", \"POISON\", \"GRASS\"],\n",
-    "    'Type 2': [\"DRAGON\", \"GHOST\", \"GHOST\", \"FIGHT\", \"PSYCHIC\", \"FAIRY\", \"-\"],\n",
+    "    'Type 2': [\"DRAGON\", \"GHOST\", \"GHOST\", \"FIGHTING\", \"PSYCHIC\", \"FAIRY\", \"-\"],\n",
     "    'BST': [485, 308, 508, 555, 555, 555, 550],\n",
     "    'HP': [80, 40, 71, 88, 88, 88, 80],\n",
     "    'Attack': [80, 45, 60, 128, 75, 91, 120],\n",
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1041,7 @@
        "[963 rows x 16 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
