--- a/pokemon-powercreep-eda.ipynb
+++ b/pokemon-powercreep-eda.ipynb
@@ -53,14 +53,19 @@
     "1. The Data\n",
     "    - Loading\n",
     "    - Previewing & Explaining\n",
-    "    - Error Testing\n",
+    "    - Error Checking\n",
+    "        - The Extreme Outlier\n",
+    "        - Suspicious Stats\n",
+    "        - Out of Place Types\n",
     "1. Analysis\n",
     "    - Stat Distributions\n",
+    "        - Global Averages and Medians\n",
+    "        - Generational Averages and Medians\n",
     "    - Special Pokemon\n",
     "        - Legendaries\n",
     "        - Mythicals\n",
     "        - Notables\n",
-    "        - \"Optimized\" Pokemon\n",
+    "        - \"Optimized\" Pokemon (note to self, make a scatterplot or some other one of all pokemon with bst on x and standard deviation on y and color them by generation)\n",
     "        - Average Type Weakness\n",
     "1. Conclusions\n",
     "    "
@@ -78,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +278,7 @@
        "4          60           50     65           1      False     False    False  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +357,7 @@
        "      <td>Okidogi</td>\n",
        "      <td>Okidogi</td>\n",
        "      <td>POISON</td>\n",
-       "      <td>FIGHT</td>\n",
+       "      <td>FIGHTING</td>\n",
        "      <td>555</td>\n",
        "      <td>88</td>\n",
        "      <td>128</td>\n",
@@ -427,12 +432,12 @@
        "</div>"
       ],
       "text/plain": [
-       "      Dex No         Name    Base Name  Type 1   Type 2  BST  HP  Attack  \\\n",
-       "1196    1013    Sinistcha    Sinistcha   GRASS    GHOST  508  71      60   \n",
-       "1197    1014      Okidogi      Okidogi  POISON    FIGHT  555  88     128   \n",
-       "1198    1015    Munkidori    Munkidori  POISON  PSYCHIC  555  88      75   \n",
-       "1199    1016  Fezandipiti  Fezandipiti  POISON    FAIRY  555  88      91   \n",
-       "1200    1017      Ogerpon      Ogerpon   GRASS        -  550  80     120   \n",
+       "      Dex No         Name    Base Name  Type 1    Type 2  BST  HP  Attack  \\\n",
+       "1196    1013    Sinistcha    Sinistcha   GRASS     GHOST  508  71      60   \n",
+       "1197    1014      Okidogi      Okidogi  POISON  FIGHTING  555  88     128   \n",
+       "1198    1015    Munkidori    Munkidori  POISON   PSYCHIC  555  88      75   \n",
+       "1199    1016  Fezandipiti  Fezandipiti  POISON     FAIRY  555  88      91   \n",
+       "1200    1017      Ogerpon      Ogerpon   GRASS         -  550  80     120   \n",
        "\n",
        "      Defense  Sp. Attack  Sp. Defense  Speed  Generation  Legendary  \\\n",
        "1196      106         121           80     70           9      False   \n",
@@ -449,7 +454,7 @@
        "1200     False    False  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,6 +482,217 @@
     "- Generation: Pokemon are released not one by one, but in large batches, referred to as \"Generations\", or more colloquially, just \"Gens\". There are currently nine generations of Pokemon, and this column assigns the corresponding generation number to each Pokemon. Note: The generations are in order with two exceptions, those being Mega Evolutions, which were introduced to older Pokemon in Generation 6. While Mega Evolutions tehnically belong to the generation that their base form is from, since they were all added in at a later date, I have decided to keep them under the Generation 6 banner.\n",
     "\n",
     "- Legendary, Mythical, and Notable: These are all special classes of Pokemon. Legendary and Mythical and official designations by the Pokemon Company. Notable is a classification I have chosen to add to Pokemon that miscellaneously special, and are not officially Legendary or Mythical."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Error Testing**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The Extreme Outlier\n",
+    "\n",
+    "Publicly online we can see what should be the highest and lowest stats in each category, so it should be simple to see if there are any extreme outliers. Before we do this, we will manually remove a Pokemon that, while technically is in the Pokedex, is not obtainable in game, and therefore should not be considered. This Pokemon is Eternamax Eternatus, a Pokemon meant only as a one-time boss battle.\n",
+    "\n",
+    "This was not done in the data prep file in order to not have a missing Pokemon in case anyone else wishes to use the csv file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pokedf = pokedf[pokedf['Name'] != \"Eternamax\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Dex No</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Base Name</th>\n",
+       "      <th>Type 1</th>\n",
+       "      <th>Type 2</th>\n",
+       "      <th>BST</th>\n",
+       "      <th>HP</th>\n",
+       "      <th>Attack</th>\n",
+       "      <th>Defense</th>\n",
+       "      <th>Sp. Attack</th>\n",
+       "      <th>Sp. Defense</th>\n",
+       "      <th>Speed</th>\n",
+       "      <th>Generation</th>\n",
+       "      <th>Legendary</th>\n",
+       "      <th>Mythical</th>\n",
+       "      <th>Notable</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1057</th>\n",
+       "      <td>890</td>\n",
+       "      <td>Eternatus</td>\n",
+       "      <td>Eternatus</td>\n",
+       "      <td>POISON</td>\n",
+       "      <td>DRAGON</td>\n",
+       "      <td>690</td>\n",
+       "      <td>140</td>\n",
+       "      <td>85</td>\n",
+       "      <td>95</td>\n",
+       "      <td>145</td>\n",
+       "      <td>95</td>\n",
+       "      <td>130</td>\n",
+       "      <td>8</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Dex No       Name  Base Name  Type 1  Type 2  BST   HP  Attack  Defense  \\\n",
+       "1057     890  Eternatus  Eternatus  POISON  DRAGON  690  140      85       95   \n",
+       "\n",
+       "      Sp. Attack  Sp. Defense  Speed  Generation  Legendary  Mythical  Notable  \n",
+       "1057         145           95    130           8       True     False    False  "
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verify that the Pokemon was removed by checking for all Pokemon with its Base Name\n",
+    "pokedf[pokedf['Base Name'] == \"Eternatus\"]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Suspicious Values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No Pokémon have BST stats below 175 or above 1125.\n",
+      "No Pokémon have HP stats below 1 or above 255.\n",
+      "No Pokémon have Attack stats below 5 or above 190.\n",
+      "No Pokémon have Defense stats below 5 or above 230.\n",
+      "No Pokémon have Sp. Attack stats below 10 or above 194.\n",
+      "No Pokémon have Sp. Defense stats below 20 or above 230.\n",
+      "No Pokémon have Speed stats below 5 or above 200.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# highest and lowest recorded stats taken directly from the online resource, Bulbapedia\n",
+    "stat_extremes = {\n",
+    "    'BST': {'min': 175, 'max': 1125},\n",
+    "    'HP': {'min': 1, 'max': 255},\n",
+    "    'Attack': {'min': 5, 'max': 190},\n",
+    "    'Defense': {'min': 5, 'max': 230},\n",
+    "    'Sp. Attack': {'min': 10, 'max': 194},\n",
+    "    'Sp. Defense': {'min': 20, 'max': 230},\n",
+    "    'Speed': {'min': 5, 'max': 200}\n",
+    "}\n",
+    "\n",
+    "# iterate through the stats\n",
+    "for stat, extremes in stat_extremes.items():\n",
+    "    min_value = extremes['min']\n",
+    "    max_value = extremes['max']\n",
+    "\n",
+    "    # store checks as booleans\n",
+    "    has_below_min = (pokedf[stat] < min_value).any()\n",
+    "    has_above_max = (pokedf[stat] > max_value).any()\n",
+    "\n",
+    "    # print results\n",
+    "    if has_below_min:\n",
+    "        print(f\"At least one Pokémon has a {stat} stat below {min_value}.\")\n",
+    "\n",
+    "    if has_above_max:\n",
+    "        print(f\"At least one Pokémon has a {stat} stat above {max_value}.\")\n",
+    "\n",
+    "    if not has_below_min and not has_above_max:\n",
+    "        print(f\"No Pokémon have {stat} stats below {min_value} or above {max_value}.\")\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There don't appear to be any major outlying stats."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Type Testing\n",
+    "\n",
+    "A simple test to make sure there are no typos or unexpected values for the Pokemon types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique values in 'Type 1' column: 18\n",
+      "Number of unique values in 'Type 2' column: 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of unique values in 'Type 1' column: {pokedf['Type 1'].nunique()}\")\n",
+    "print(f\"Number of unique values in 'Type 2' column: {pokedf['Type 2'].nunique()}\")"
    ]
   }
  ],
